# water-ripple-demo

./: CMakeLists.txt  README.md
media/: AddImpulse.glfs  HeightToNormal.glfs  Transform.glvs  Water.glfs  Water.glvs  WaterSim.glfs  scene.material
source/: Application.cpp  Application.h  BaseApplication.cpp  BaseApplication.h  RippleSimulation.cpp  RippleSimulation.h  SinbadCharacterController.h  main.cpp
